--- a/notebooks/Ejemplos_Programacion_Funcional_Java.ipynb
+++ b/notebooks/Ejemplos_Programacion_Funcional_Java.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9b842090",
+   "id": "2fa519d6",
    "metadata": {},
    "source": [
     "# Programación funcional en Java\n",
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ee30124c",
+   "id": "9e690677",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc4ab4ee",
+   "id": "f172107f",
    "metadata": {},
    "source": [
     "### Ejercicio un valor que contiene una función `incr`\n",
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a36126a1",
+   "id": "a90be712",
    "metadata": {
     "solution2": "hidden",
     "solution2_first": true
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96f91482",
+   "id": "b2055f2e",
    "metadata": {
     "solution2": "hidden"
    },
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "561a107a",
+   "id": "a9767c1d",
    "metadata": {},
    "source": [
     "### Ejercicio un valor que contiene un función `doble`\n",
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b774905a",
+   "id": "d6e29772",
    "metadata": {
     "solution2": "hidden",
     "solution2_first": true
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "c57a9891",
+   "id": "72fd1eac",
    "metadata": {
     "solution2": "hidden"
    },
@@ -180,13 +180,97 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54de3fd5",
+   "id": "80962caf",
    "metadata": {},
    "source": [
-    "## Interface `Function` algunas operaciones\n",
+    "## Interface `Function` operación `compose`\n",
     "\n",
-    "La interface tiene una función "
+    "La interface `Function` consta de varios métodos que permite construir funciones más complejas. Comencemos por las funciones de composición de permite construir una función a partir de la combinación de dos funciones. Miremos el siguiente ejemplo.\n",
+    "\n",
+    "```java\n",
+    "Function<Integer,String> i2s = i -> i.toString();\n",
+    "Function<String,Integer> s2i = s -> Integer.parseInt(s);\n",
+    "Function<Integer,Integer> i2i = s2i.compose(i2s);\n",
+    "int i = 10;\n",
+    "i = i2i.apply(i);\n",
+    "System.out.println(i);\n",
+    "```\n",
+    "\n",
+    "En este caso hemos creado dos funciones `i2s` que convierte un valor enter a una cadena de carácteres y `s2i` que toma un valor de carácter (que contiene un entero) y lo convierte a entero. Podemos crear una función que tome un valor a entero, lo convierta a un valor de tipo `String` y lo retorne en un valor entero. \n",
+    "\n",
+    "### Ejercicio función `s2s`\n",
+    "\n",
+    "Aplicando las funciones ya vistas construya una función `s2s` utilizando el mismo principio y teniendo en cuenta que solamente vamos a recibir valores de tipo entero."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74df35e4",
+   "metadata": {
+    "solution2": "hidden",
+    "solution2_first": true
+   },
+   "outputs": [],
+   "source": [
+    "Function<Integer,String> i2s = i -> i.toString();\n",
+    "Function<String,Integer> s2i = s -> Integer.parseInt(s);\n",
+    "// Defina la funcion s2s\n",
+    "String s = \"10\";\n",
+    "String r = s2s.apply(s);\n",
+    "System.out.println(r);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ada9dc01",
+   "metadata": {
+    "solution2": "hidden"
+   },
+   "outputs": [],
+   "source": [
+    "Function<Integer,String> i2s = i -> i.toString();\n",
+    "Function<String,Integer> s2i = s -> Integer.parseInt(s);\n",
+    "// Defina la funcion s2s\n",
+    "Function<String,String> s2s = i2s.compose(s2i);\n",
+    "String s = \"10\";\n",
+    "String r = s2s.apply(s);\n",
+    "System.out.println(r);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "beb3a90a",
+   "metadata": {},
+   "source": [
+    "## Interface `Function` operación andThen\n",
+    "\n",
+    "La interface `Function` tiene una versión inversa en la aplicación de la función `compose`, esta función es `andThen` que cambia el orden de aplicación como lo veremos en el siguiente ejemplo,\n",
+    "\n",
+    "```java\n",
+    "Function<Integer,String> i2s = i -> i.toString();\n",
+    "Function<String,Integer> s2i = s -> Integer.parseInt(s);\n",
+    "Function<Integer,Integer> i2i = i2s.andThen(s2i); // s2i.compose(i2s);\n",
+    "int i = 10;\n",
+    "i = i2i.apply(i);\n",
+    "System.out.println(i);\n",
+    "```\n",
+    "\n",
+    "Observe que estamos creando nuevamente la función `i2i`, pero esta vez lo estamos haciendo utilizando el método `andThen` pero aunque el orden se cambiado, se pasa primero como parámetro `s2i` y luego `i2s`, el orden de aplicación será primero `i2` y luego `s2i`.\n",
+    "\n",
+    "### Ejercicio funcion `s2s2` \n",
+    "\n",
+    "Vamos a construir una variante de la funcion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39f1feaf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
