--- a/notebooks/Ejemplos_Programacion_Funcional_Java.ipynb
+++ b/notebooks/Ejemplos_Programacion_Funcional_Java.ipynb
@@ -92,12 +92,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "id": "9e690677",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import java.util.function.Function;"
+    "import java.util.function.Function;\n",
+    "import java.util.function.BiFunction;\n",
+    "import java.util.ArrayList;\n",
+    "import java.util.Iterator;\n",
+    "import java.util.Scanner;\n",
+    "import java.io.File;\n",
+    "import java.io.FileNotFoundException;"
    ]
   },
   {
@@ -244,7 +250,7 @@
    "id": "beb3a90a",
    "metadata": {},
    "source": [
-    "## Interface `Function` operación andThen\n",
+    "## Interface `Function` operación `andThen`\n",
     "\n",
     "La interface `Function` tiene una versión inversa en la aplicación de la función `compose`, esta función es `andThen` que cambia el orden de aplicación como lo veremos en el siguiente ejemplo,\n",
     "\n",
@@ -261,16 +267,269 @@
     "\n",
     "### Ejercicio funcion `s2s2` \n",
     "\n",
-    "Vamos a construir una variante de la funcion"
+    "Vamos a construir una variante de la función `s2s` que anteriormente habíamos implementado pero en vez de utilizar el método `compose` utilizaremos en este caso el método `andThen`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "39f1feaf",
+   "metadata": {
+    "solution2": "hidden",
+    "solution2_first": true
+   },
+   "outputs": [],
+   "source": [
+    "Function<Integer,String> i2s = i -> i.toString();\n",
+    "Function<String,Integer> s2i = s -> Integer.parseInt(s);\n",
+    "// Defina la función s2s2 \n",
+    "String s = \"10\";\n",
+    "String r = s2s2.apply(s);\n",
+    "System.out.println(r);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5135c614",
+   "metadata": {
+    "solution2": "hidden"
+   },
+   "outputs": [],
+   "source": [
+    "Function<Integer,String> i2s = i -> i.toString();\n",
+    "Function<String,Integer> s2i = s -> Integer.parseInt(s);\n",
+    "Function<String,String>  s2s2 = s2i.andThen(i2s);\n",
+    "String s = \"10\";\n",
+    "String r = s2s2.apply(s);\n",
+    "System.out.println(r);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22c0f0db",
+   "metadata": {},
+   "source": [
+    "## Funciones de identidad\n",
+    "\n",
+    "Una función de identidad, es aquella que recibe un valor de un tipo `T` y retorna el mismo valor (obviamente del mismo tipo). Ya hemos visto anteriomente varias versiones de esta función, implementada de forma indirecta: `i2i`, `s2s`, etc., es decir que se implementa a través de dos funciones.\n",
+    "\n",
+    "Esto se pude lograr de forma directa de la siguiente forma:\n",
+    "\n",
+    "```java\n",
+    "Function<Integer,Integer> i2i3 = t -> t;\n",
+    "int i = 22;\n",
+    "int j = i2i3.apply(i);\n",
+    "System.out.printf(\"i: %d j: %d\\n\", i, j);\n",
+    "```\n",
+    "\n",
+    "Esta es una forma de obtener dicha función de identidad. Existe aún otra más forma de implementar y en este caso se obtiene a través del método estático `identity()` de la interface `Function` este permite que no tengamos que escribir una función lambda ($\\lambda$), sin que este método nos retorna la función correspondiente al tipo esperado.\n",
+    "\n",
+    "### Función de identidad `id_d` \n",
+    "\n",
+    "La función `id_d` es la función de identidad para el tipo `double`. Implemente dicha función utilizando para ello el método estático `identity()` de la interface `Function`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a190254",
+   "metadata": {
+    "solution2": "hidden",
+    "solution2_first": true
+   },
+   "outputs": [],
+   "source": [
+    "// Defina la función id_d por medio del método estático `identity()`\n",
+    "double l = 23.4;\n",
+    "double m = id_d.apply(l);\n",
+    "System.out.printf(\"l: %2.2f m: %2.2f\\n\", l, m);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cd77234",
+   "metadata": {
+    "solution2": "hidden"
+   },
+   "outputs": [],
+   "source": [
+    "Function <Double,Double> id_d = Function.identity();\n",
+    "double l = 23.4;\n",
+    "double m = id_d.apply(l);\n",
+    "System.out.printf(\"l: %2.2f m: %2.2f\\n\", l, m);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3bcf1a7b",
+   "metadata": {},
+   "source": [
+    "## Streams (Flujos)\n",
+    "\n",
+    "Los *Streams* (Flujos) permiten un procesamiento unificado de las colecciones y otros conjuntos de datos. Este proporciona un grupo de métodos que permiten manipular estos tipos de datos.\n",
+    "\n",
+    "Y aunque los *streams* (Flujos) se asemejan a las colecciones, existen algunas diferencias notables.\n",
+    "\n",
+    "* Algunas colecciones pueden ser referenciadas por un índice, los *streams* no puede ser referenciados de esta forma por lo tanto son accedidos secuencialmente.\n",
+    "* Una vez se obtiene una referencia a un *streams*, su contenido y orden ya se encuentra preestablecidos por lo tanto no pueden modificarse.\n",
+    "* Los *streams* podrían contener un flujo infinito.\n",
+    "\n",
+    "Observe el siguiente ejemplo a partir de una colección de tipo `ArrayList` podemos obtener un flujo y procesarlo en este caso obteniendo únicamente los valores pares de dicha colección. \n",
+    "\n",
+    "```java\n",
+    "import java.util.ArrayList;\n",
+    "\n",
+    "ArrayList<Integer> al = new ArrayList<>();\n",
+    "for (int i = 0; i < 20; i++) al.add(i);\n",
+    "al.stream().filter(e -> e % 2 == 0).forEach(e -> System.out.println(e));\n",
+    "```\n",
+    "\n",
+    "Un *stream* nos facilita procesar una colección de elementos de forma mucho más efectiva. Siempre debe tener en cuenta que el *stream* no modifica el contenido original, sino que se encarga de crear un nuevo.\n",
+    "\n",
+    "\n",
+    "Para los siguientes ejercicios vamos a tener un sistema de Registro de Vigilancia de Vehiculos, en diferentes carreteras."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "05566b88",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "public class Registro {\n",
+    "   private final String modelo; // Modelo Vehiculo \n",
+    "   private final int observador; // Identificador del observador\n",
+    "   private final int contador; // Numero de vehículos observados\n",
+    "   private final int carretera; // Numero de la carretera\n",
+    "   private final int periodo; // \n",
+    "   \n",
+    "   /**\n",
+    "   * Crea un registro de una observacion de un modelo de vehiculo en una carretera\n",
+    "   * @param modelo El modelo del vehiculo\n",
+    "   * @param observador El ID del observador\n",
+    "   * @param contador Número de vehiculos observados\n",
+    "   * @param carretera El ID de la carretera en que fueron vistos\n",
+    "   * @param period    El periodo del informe\n",
+    "   */\n",
+    "   public Registro(String modelo, int observador, int contador, int carretera, int periodo) {\n",
+    "      this.modelo = modelo;\n",
+    "      this.observador = observador;\n",
+    "      this.contador = contador;\n",
+    "      this.carretera = carretera;\n",
+    "      this.periodo = periodo;\n",
+    "   }\n",
+    "   \n",
+    "   public String obtModelo() {\n",
+    "      return modelo;\n",
+    "   }\n",
+    "   \n",
+    "   public int obtObservador() {\n",
+    "       return observador;\n",
+    "   }\n",
+    "   \n",
+    "   public int obtContador() {\n",
+    "       return contador;\n",
+    "   }\n",
+    "   \n",
+    "   public int obtCarretera() {\n",
+    "       return carretera;\n",
+    "   }\n",
+    "   \n",
+    "   public int periodo() {\n",
+    "       return periodo;\n",
+    "   }\n",
+    "   \n",
+    "   public String obtDetalles() {\n",
+    "       return modelo +\n",
+    "           \", contador =\" + contador +\n",
+    "           \", carretera =\" + carretera + \n",
+    "           \", observador =\" + observador +\n",
+    "           \", periodo =\" + periodo;\n",
+    "   }\n",
+    "}\n",
+    "\n",
+    "public class LectorRegistro {\n",
+    "\n",
+    "    public LectorRegistro() {\n",
+    "    }\n",
+    "\n",
+    "    public ArrayList<Registro> obtRegistros(String nombreFichero)\n",
+    "        throws FileNotFoundException {\n",
+    "        ArrayList<Registro> registros = new ArrayList<>();\n",
+    "        Scanner scanner = new Scanner(new File(nombreFichero));\n",
+    "        while (scanner.hasNextLine()) {\n",
+    "            String linea = scanner.nextLine();\n",
+    "            String []campos = linea.split(\",\");\n",
+    "            registros.add(new Registro(campos[0],\n",
+    "                                       Integer.parseInt(campos[1]),\n",
+    "                                       Integer.parseInt(campos[2]),\n",
+    "                                       Integer.parseInt(campos[3]),\n",
+    "                                       Integer.parseInt(campos[4])));\n",
+    "        }\n",
+    "        return registros;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class MonitorRegistro {\n",
+    "   private ArrayList<Registro> registros;\n",
+    "   \n",
+    "   public MonitorRegistro() {\n",
+    "     this.registros = new ArrayList<>();\n",
+    "   }\n",
+    "   \n",
+    "   public void adicionarRegistros(String nombreFichero) {\n",
+    "      LectorRegistro lr = new LectorRegistro();\n",
+    "      try {\n",
+    "         registros.addAll(lr.obtRegistros(nombreFichero));\n",
+    "      }\n",
+    "      catch (FileNotFoundException fnfe) {\n",
+    "         System.err.println(\"Fichero no encontrado: \" + nombreFichero);\n",
+    "      }\n",
+    "   }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "300db650",
+   "metadata": {},
+   "source": [
+    "Vamos a implementar algunos problemas.\n",
+    "\n",
+    "### Ejercicio. Mostrar todos los registros obtenidos de fichero\n",
+    "\n",
+    "Adicionar a la clase `MonitorRegistro` un método llamado `mostrarModelo` que tenga la siguiente firma.\n",
+    "\n",
+    "```java\n",
+    "public void mostrarModelo(String modelo) { ... }\n",
+    "```\n",
+    "\n",
+    "### Ejercicio. Mostrar los vehiculos que cumplan una condición especifica\n",
+    "\n",
+    "Adicionar a la clase `MonitorRegistro` un método llamado:\n",
+    "```java\n",
+    "public void mostrarPredicado(Function<Registro,Boolean> predicado) { ... }\n",
+    "```\n",
+    "\n",
+    "### Ejercicio. Contar un valor especifico de los vehiculos\n",
+    "\n",
+    "Adicioanr a la clase `MonitorRegistor` un método llamado:\n",
+    "\n",
+    "```java\n",
+    "public int contar(BiFunction<Registro,Integer,Integer> funcion) { ... }\n",
+    "```\n",
+    "\n",
+    "### Ejercicio. Contar un valor especifico de los vehiculso con una condición especifica\n",
+    "\n",
+    "Adicionar a la clase `MonitorRegistro` un método llamado:\n",
+    "\n",
+    "```java\n",
+    "public int contarPredicador(Function<Registro,Boolean> predicado, BiFunction<Registro,Integer,Integer> funcion) { .. }\n",
+    "```\n"
+   ]
   }
  ],
  "metadata": {
